# flyos-standard

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  FAQ.md  FAQ.zh-CN.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md
.gitee/: ISSUE_TEMPLATE.en.md  ISSUE_TEMPLATE.zh-CN.md
.gitee/ISSUE_TEMPLATE/: bug_report.md  porting_question.md  trial_feedback.md
.github/ISSUE_TEMPLATE/: bug_report.md  porting_question.md  trial_feedback.md
docs/: README.md  README.zh-CN.md  coding-standard.md  coding-standard.zh-CN.md  编码规范.md
flyos/: CMakeLists.txt  flyos_config.h  flyos_ipc.c  flyos_ipc.h  flyos_kernel.c  flyos_kernel.h  flyos_mem.c  flyos_mem.h  flyos_type.h
flyos/doc/: API参考.md  FlyOS高安全性RTOS演进计划.md  api-reference.md  api-reference.zh-CN.md  architecture.md  architecture.zh-CN.md  configuration.md  configuration.zh-CN.md  high-safety-rtos-roadmap.md  high-safety-rtos-roadmap.zh-CN.md  open-source-audit.md  open-source-audit.zh-CN.md  porting-guide.md  porting-guide.zh-CN.md  quick-start.md  quick-start.zh-CN.md  公开代码审计记录.md  快速开始.md  架构设计.md  移植指南.md  配置指南.md
flyos/port/: README.md  README.zh-CN.md  flyos_port.h  flyos_port_config.h
flyos/port/s32k344/: README.md  README.zh-CN.md  flyos_port.c  flyos_port_asm.s
flyos/port/stm32f4/: README.md  README.zh-CN.md  flyos_port.c  flyos_port_asm.s
